--- a/package.json
+++ b/package.json
@@ -20,11 +20,20 @@
     "url": "https://github.com/LambdaSchool/node-server-testing/issues"
   },
   "homepage": "https://github.com/LambdaSchool/node-server-testing#readme",
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "knex": "^0.20.10",
+    "nodemo": "^1.0.0",
+    "sqlite3": "^4.1.1"
+  },
   "devDependencies": {
     "jest": "^24.9.0",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "cross-env": "^7.0.0",
+    "nodemon": "^2.0.2"
   },
-  "dependencies": {
-    "express": "^4.17.1"
+  "jest": {
+    "testEnviorment": "node"
   }
 }
